fix: style scrollbar

--- a/src/pages/Pages.scss
+++ b/src/pages/Pages.scss
@@ -29,7 +29,7 @@
     min-width: 300px;
 
     &:first-child {
-      padding: 0 0 0 2px;
+      padding: 16px 0 0 2px;
     }
 
     .columnList_column {
@@ -50,7 +50,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #ececec;
+  background: white;
   border-radius: 5px;
 }
 
